--- a/index.html
+++ b/index.html
@@ -2,12 +2,15 @@
 <html lang="en">
 <head>
     <script src="./rock.js"></script>
-    <link rel="stylesheet" href="rock.js">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-    Hola
+    <ul>
+        <li><button>Rock</button></li>
+        <li><button>Paper</button></li>
+        <li><button>Scissors</button></li>
+    </ul>
 </body>
 </html>
