--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <script src="./rock.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-    <ul>
+    <ul id="choices">
         <li><button>Rock</button></li>
         <li><button>Paper</button></li>
         <li><button>Scissors</button></li>
     </ul>
+    <div id="results"></div>
+    <div id="scores">Player Score: <span id="playerScore">0</span> | Computer Score: <span id="computerScore">0</span></div>
+    <script src="./rock.js"></script>
 </body>
 </html>
